--- a/config/database.yml
+++ b/config/database.yml
@@ -28,10 +28,10 @@ development:
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: postgres
+  # username: 
 
   # The password associated with the PostgreSQL role (username).
-  password: 035778994a
+  # password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -58,8 +58,8 @@ test:
   <<: *default
   database: rails_blog_app_test
   
-  username: postgres
-  password: 035778994a
+  # username: 
+  # password: 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
